// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SingleTask matches snapshot 1`] = `
<div>
  <article
    class="sc-fzpans gHCdfm"
  >
    <div
      class="sc-fzplWN gwxuzL"
    >
      <div>
        <div
          class="sc-fzplWN gwxuzL"
        >
          <h5
            class="sc-fznyAO drGMcz"
          >
            Ir às compras
          </h5>
          <h6
            class="sc-fznZeY cjOYaZ"
            color="#673AB7"
          >
            Waiting for
          </h6>
        </div>
        <div
          class="sc-fznKkj jNhHYx"
        >
          <svg>
            calendr.svg
          </svg>
          <p>
            14 Aug
          </p>
        </div>
      </div>
      <div
        class="sc-fzoyAV bnnRRV"
      />
    </div>
  </article>
</div>
`;

exports[`Tasks Page matches snapshot 1`] = `
<div>
  <div
    class="sc-fzpjYC izvAVX"
  >
    <h1
      class="sc-fznxsB iTQhax"
    >
      Tasks
    </h1>
    <div
      class="sc-fznJRM cBJzUp"
    >
      <div
        class="sc-fznWqX dZCTFs"
      >
        <div
          class="sc-fzoiQi gKygiC"
        >
          <div
            class="MuiInputBase-root MuiInput-root"
          >
            <div
              aria-haspopup="listbox"
              aria-labelledby="tasks-view"
              class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
              id="tasks-view"
              role="button"
              tabindex="0"
            >
              Today
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput"
              tabindex="-1"
              value="today"
            />
            <svg
              class="MuiSelect-icon"
            >
              chevron.svg
            </svg>
          </div>
        </div>
        <h3
          class="sc-fzqARJ lfDBcG"
        >
          0
        </h3>
      </div>
      <div
        class="sc-fzqNqU hQTkrp"
      >
        <svg
          class="settings-icon"
        >
          settings.svg
        </svg>
        <div
          class="sc-AxjAm khxSQh"
        >
          <h2
            class="sc-AxiKw jzoYkp"
          >
            Settings
          </h2>
          <div
            class="sc-AxhCb bCDkJU"
          >
            <div
              class="sc-AxhUy gnZxSn"
            >
              <label
                class="sc-AxgMl fHkhzP"
                for="sort-by"
              >
                Sort by
              </label>
              <div
                class="sc-AxheI hCWMTo"
              >
                <div
                  class="MuiInputBase-root MuiInput-root"
                >
                  <div
                    aria-haspopup="listbox"
                    aria-labelledby="sort-by"
                    class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
                    id="sort-by"
                    role="button"
                    tabindex="0"
                  >
                    Date
                  </div>
                  <input
                    aria-hidden="true"
                    class="MuiSelect-nativeInput"
                    tabindex="-1"
                    value="DATE"
                  />
                  <svg
                    class="MuiSelect-icon"
                  >
                    chevron.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="sc-AxhUy gnZxSn"
            >
              <label
                class="sc-AxgMl fHkhzP"
                for="font-size"
              >
                Font size
              </label>
              <div
                class="sc-AxheI hCWMTo"
              >
                <div
                  class="MuiInputBase-root MuiInput-root"
                >
                  <div
                    aria-haspopup="listbox"
                    aria-labelledby="font-size"
                    class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
                    id="font-size"
                    role="button"
                    tabindex="0"
                  >
                    Medium
                  </div>
                  <input
                    aria-hidden="true"
                    class="MuiSelect-nativeInput"
                    tabindex="-1"
                    value="medium"
                  />
                  <svg
                    class="MuiSelect-icon"
                  >
                    chevron.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="sc-AxhUy gnZxSn"
            >
              <label
                class="sc-AxgMl fHkhzP"
              >
                Categories
              </label>
              <div
                class="sc-AxmLO ceYEas"
              >
                <span
                  class="sc-fzoLsD bpeBKU"
                >
                  <svg>
                    plus.svg
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="sc-AxirZ gpexXZ"
        />
      </div>
    </div>
    <section
      class="sc-fzoyTs gUbeoJ"
    >
      <div
        class="sc-fznMAR gCPQx"
      >
        <div
          class="sc-fzoLag kUuTIm"
        >
          <div
            class="sc-fzoXzr hScLKH"
          />
          <div
            class="sc-fzoXzr hScLKH doublebounce2"
          />
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`TasksSettings matches snashot 1`] = `
<div>
  <svg
    class="settings-icon"
  >
    settings.svg
  </svg>
  <div
    class="sc-AxjAm khxSQh"
  >
    <h2
      class="sc-AxiKw jzoYkp"
    >
      Settings
    </h2>
    <div
      class="sc-AxhCb bCDkJU"
    >
      <div
        class="sc-AxhUy gnZxSn"
      >
        <label
          class="sc-AxgMl fHkhzP"
          for="sort-by"
        >
          Sort by
        </label>
        <div
          class="sc-AxheI hCWMTo"
        >
          <div
            class="MuiInputBase-root MuiInput-root"
          >
            <div
              aria-haspopup="listbox"
              aria-labelledby="sort-by"
              class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
              id="sort-by"
              role="button"
              tabindex="0"
            >
              <span>
                ​
              </span>
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput"
              tabindex="-1"
              value=""
            />
            <svg
              class="MuiSelect-icon"
            >
              chevron.svg
            </svg>
          </div>
        </div>
      </div>
      <div
        class="sc-AxhUy gnZxSn"
      >
        <label
          class="sc-AxgMl fHkhzP"
          for="font-size"
        >
          Font size
        </label>
        <div
          class="sc-AxheI hCWMTo"
        >
          <div
            class="MuiInputBase-root MuiInput-root"
          >
            <div
              aria-haspopup="listbox"
              aria-labelledby="font-size"
              class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiInputBase-input MuiInput-input"
              id="font-size"
              role="button"
              tabindex="0"
            >
              Medium
            </div>
            <input
              aria-hidden="true"
              class="MuiSelect-nativeInput"
              tabindex="-1"
              value="medium"
            />
            <svg
              class="MuiSelect-icon"
            >
              chevron.svg
            </svg>
          </div>
        </div>
      </div>
      <div
        class="sc-AxhUy gnZxSn"
      >
        <label
          class="sc-AxgMl fHkhzP"
        >
          Categories
        </label>
        <div
          class="sc-AxmLO ceYEas"
        >
          <span
            class="sc-fzoLsD bpeBKU"
          >
            <svg>
              plus.svg
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="sc-AxirZ gpexXZ"
  />
</div>
`;
